_generated-doc/1.11/config/quarkus-config-group-logging-cleanup-filter-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-config-group-logging-cleanup-filter-config_quarkus.log.filters-log-cleanup-filters-internal-use]]link:#quarkus-config-group-logging-cleanup-filter-config_quarkus.log.filters-log-cleanup-filters-internal-use[Log cleanup filters - internal use]

h|Type
h|Default

a| [[quarkus-config-group-logging-cleanup-filter-config_quarkus.log.filter.-filters-.if-starts-with]]`link:#quarkus-config-group-logging-cleanup-filter-config_quarkus.log.filter.-filters-.if-starts-with[quarkus.log.filter."filters".if-starts-with]`

[.description]
--
The message starts to match
--|list of string 
|`inherit`


a| [[quarkus-config-group-logging-cleanup-filter-config_quarkus.log.filter.-filters-.target-level]]`link:#quarkus-config-group-logging-cleanup-filter-config_quarkus.log.filter.-filters-.target-level[quarkus.log.filter."filters".target-level]`

[.description]
--
The new log level for the filtered message, defaults to DEBUG
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`DEBUG`

|===