_generated-doc/3.8/config/quarkus-config-group-logging-cleanup-filter-config.adoc

:summaryTableId: quarkus-config-group-logging-cleanup-filter-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-config-group-logging-cleanup-filter-config_quarkus-log-filters-log-cleanup-filters-internal-use]]link:#quarkus-config-group-logging-cleanup-filter-config_quarkus-log-filters-log-cleanup-filters-internal-use[Log cleanup filters - internal use]

h|Type
h|Default

a| [[quarkus-config-group-logging-cleanup-filter-config_quarkus-log-filter-filters-if-starts-with]]`link:#quarkus-config-group-logging-cleanup-filter-config_quarkus-log-filter-filters-if-starts-with[quarkus.log.filter."filters".if-starts-with]`


[.description]
--
The message prefix to match

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILTER__FILTERS__IF_STARTS_WITH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILTER__FILTERS__IF_STARTS_WITH+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`inherit`


a| [[quarkus-config-group-logging-cleanup-filter-config_quarkus-log-filter-filters-target-level]]`link:#quarkus-config-group-logging-cleanup-filter-config_quarkus-log-filter-filters-target-level[quarkus.log.filter."filters".target-level]`


[.description]
--
The new log level for the filtered message. Defaults to DEBUG.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILTER__FILTERS__TARGET_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILTER__FILTERS__TARGET_LEVEL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.jboss.org/jbossas/javadoc/7.1.2.Final/org/jboss/logmanager/Level.html[Level]
 
|`DEBUG`

|===